syntax = "proto3";

package domain;

service ExampleService {
    rpc GetExample (ExampleRequest) returns (ExampleResponse) {}
}

message ExampleRequest {
    string name = 1;
}

message ExampleResponse {
    string message = 1;
}